[package]
name = "narwhal-rs"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/ptechen"
documentation = "https://github.com/ptechen/narwhal/blob/main/README.md"
repository = "https://github.com/ptechen/narwhal.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "narwhal"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
